# Janet-CSharp

./: .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  Directory.Build.props  JanetSharp.sln  README.md  ROADMAP.md  build_native.bat
.github/workflows/: ci.yml
benchmarks/JanetSharp.Benchmarks/: EvalBenchmarks.cs  FunctionCallBenchmarks.cs  JanetSharp.Benchmarks.csproj  Program.cs  StartupBenchmarks.cs
benchmarks/JanetSharp.Benchmarks/BenchmarkDotNet.Artifacts/results/: JanetSharp.Benchmarks.EvalBenchmarks-report-github.md  JanetSharp.Benchmarks.EvalBenchmarks-report.csv  JanetSharp.Benchmarks.EvalBenchmarks-report.html  JanetSharp.Benchmarks.FunctionCallBenchmarks-report-github.md  JanetSharp.Benchmarks.FunctionCallBenchmarks-report.csv  JanetSharp.Benchmarks.FunctionCallBenchmarks-report.html  JanetSharp.Benchmarks.StartupBenchmarks-report-github.md  JanetSharp.Benchmarks.StartupBenchmarks-report.csv  JanetSharp.Benchmarks.StartupBenchmarks-report.html
docs/: PERFORMANCE.md  README.md
docs/guide/: calling-csharp.md  calling-janet.md  getting-started.md  memory-management.md  type-coercion.md  types.md
native/: CMakeLists.txt  janet_shim.c
src/JanetSharp.Core/: Janet.cs  JanetAbstract.cs  JanetArray.cs  JanetBuffer.cs  JanetCallback.cs  JanetConvert.cs  JanetException.cs  JanetFiber.cs  JanetFiberStatus.cs  JanetFunction.cs  JanetKeyword.cs  JanetModule.cs  JanetRuntime.cs  JanetSharp.Core.csproj  JanetSignal.cs  JanetString.cs  JanetStruct.cs  JanetSymbol.cs  JanetTable.cs  JanetTuple.cs  JanetType.cs  JanetValue.cs  NativeMethods.cs
tests/JanetSharp.Tests/: AbstractTests.cs  AssemblyInfo.cs  CollectionTests.cs  FiberTests.cs  FunctionTests.cs  JanetSharp.Tests.csproj  ModuleTests.cs  Phase10Tests.cs  Phase10_3Tests.cs  Phase2Tests.cs  Phase3Tests.cs  Phase4Tests.cs  Phase7Tests.cs  Phase9Tests.cs  Phase9_2Tests.cs  RuntimeTests.cs  SafetyTests.cs  SmokeTests.cs  StdlibTests.cs  StressTests.cs  StringTests.cs  TableTests.cs  ValueTests.cs
